advert model, controller, routing updated
